<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">



    <EditText
        android:id="@+id/VehicleNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="VehicleNumber"
        android:ems="10"
        android:hint="@string/vehiclenumber"
        android:inputType="textPersonName"
        tools:targetApi="o" />
    <EditText
        android:id="@+id/ChasisNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="VehicleNumber"
        android:ems="10"
        android:hint="@string/Chasenumber"
        android:inputType="textPersonName"
        tools:targetApi="o" />
    <Button
        android:id="@+id/add_vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/e"
        android:textColor="#ffff" />


</LinearLayout>