<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserCard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="59dp"
        android:text="@string/id"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="109dp"
        android:text="Name:"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="48dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="159dp"
        android:text="@string/phone_number"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="209dp"
        android:text="@string/lisence_number"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="259dp"
        android:text="@string/wallet_amount"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="48dp" />






    <!---->

    <TextView
        android:id="@+id/idtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="59dp"
        android:text="@string/id"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="109dp"
        android:text="@string/name"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="48dp" />
    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="159dp"
        android:text="@string/phone_number"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/lnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="209dp"
        android:text="@string/lisence_number"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/walletamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="259dp"
        android:text="@string/nil"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="48dp" />
    <!---->
</RelativeLayout>